# pjax

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: comparison.py  data.py
pjax/: __init__.py  config.py  optim.py
pjax/core/: api.py  computation.py  frozen_dict.py  no_ops.py  ops.py
pjax/nn/: modules.py
